--- a/scss/partials/_customizations.scss
+++ b/scss/partials/_customizations.scss
@@ -8,8 +8,6 @@
 .size100
 {
     height: 100% !important;
-    overflow-x: hidden !important;
-    overflow-y: scroll !important;
     grid-row: 2 span !important;
 
 
@@ -17,8 +15,6 @@
 
         background-color: black !important;
         height: 100% !important;
-        overflow-x: hidden !important;
-        overflow-y: scroll !important;
         grid-row: 2 span !important;
         overflow: visible !important; 
         
